[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
