[package]
name = "telegram_bot"
version = "0.2.0"
edition = "2021"

[dependencies]
# Axum 0.7+ ve Tokio 1.35+ modern standarttır
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reqwest için rustls-tls kullanarak daha hafif bir binary elde ederiz
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default_features = false }
once_cell = "1.18"

[profile.release]
opt-level = 'z'     # Binary boyutunu en küçüğe indirir (RAM dostu)
lto = "fat"         # Link Time Optimization (Tüm dosyalar arası en derin analiz)
codegen-units = 1   # Paralel derlemeyi kapatır, daha yavaş derler ama daha hızlı kod üretir
panic = "abort"     # Hata anında temizlik yapmaz, direkt kapanır (Hız kazandırır)
strip = true        # Debug sembollerini siler (Go'daki -s -w ile aynı işi yapar)
